--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,13 @@
-Needs = Electricity,Rent,Petrol,Vegetable_And_Groceries,Doctor_Medicine,Haircut,Lenskart,Uber,Wifi,Mom,Puncture,Mobile Recharge,Cred,Parking,Water Bottle,PRINT,Maid,FOOTBALL,LAUNDRY,BASKET,THERAPY
+Needs = Electricity,Rent,Petrol,Vegetable_And_Groceries,Doctor_Medicine,Uber,Wifi,Mom,Mobile Recharge,Cred,Maid,other_needs
 Wants = Eating_Outside,Shopping,Movie,Travel
 Investments = Investment,Savings,INDIAN CLEARING CORP,SBIN0003449-412972839457,Zerodha,-RD,Saving,RD INSTALLMENT
 
-Eating_Outside = Pani Puri,Ice Cream,Poha,Breakfast,Zomato,Jijai,Sandwhich,Mastani,Pizza,SUJATA,Pastry,SEMOSA,SANDWICH,PARATHA
-Vegetable_And_Groceries = Vegetable,Biscuit,Dahi,Farsan,Matki,Pav,Butter,Dunzo,Milk,Paneer,Cheese,SHRIKHAND,POTATO,GROUNDNUT,Bread,MANGO,METRO,Fruits,DRY FRUITS,ADRAK,COCONUT,BATTER,LEMON,BANANA,PANIPURI,DMART,CAFE,MOOG,TOMATO,BALAJI TRADE
-Doctor_Medicine = Iodex,Wellness,Doctor,WELLNESS FOREVER,DENTIST
+Eating_Outside = Pani Puri,Ice Cream,Poha,Breakfast,Zomato,Jijai,Sandwhich,Mastani,Pizza,SUJATA,Pastry,SEMOSA,SANDWICH,PARATHA,PRADEEP SWEETS
+Vegetable_And_Groceries = Vegetable,Biscuit,Dahi,Farsan,Matki,Pav,Butter,Dunzo,Milk,Paneer,Cheese,SHRIKHAND,POTATO,GROUNDNUT,Bread,MANGO,METRO,Fruits,DRY FRUITS,ADRAK,COCONUT,BATTER,LEMON,BANANA,PANIPURI,DMART,CAFE,MOOG,TOMATO,BALAJI TRADE,GROCERY,PANNER,MAHADEV KIRANA
+Doctor_Medicine = Iodex,Wellness,Doctor,WELLNESS FOREVER,DENTIST,MEDICINES
 Movie = BookMyShow
 Wifi = Jio
+Petrol = Petrol
+other_needs =Haircut,Puncture,Lenskart,Parking,Water Bottle,PRINT,FOOTBALL,LAUNDRY,BASKET,THERAPY,BISLERI
+Mom = Mom
+Rent = Rent
